objects/Account_Cede_Information__c.object
<CustomObject>
    <description>Tracks Cedes, Lapses and other Account status changes that require additional information to be recorded.</description>
    <fields>
        <fullName>Account_Action__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Cede Information</relationshipLabel>
        <relationshipName>Account_Cedes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Anthem_InterPlan_Contact__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Anthem InterPlan Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovedProducts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved Cede Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Broker_Consultant__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Broker/Consultant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cede_Arrangement__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cede Arrangement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cede_Contracts__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <label>Cede Contracts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cede_ID__c</fullName>
        <label>Cede ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cede_Locations__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cede Locations</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cede_Record_Status__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cede Record Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cede_Type__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cede Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>BW 2015
ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarters_Plan__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Headquarters Plan</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intra_Anthem__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Intra-Anthem</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Cede_Date__c</fullName>
        <description>BW - Nov 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Cede Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Requesting_Cede__c</fullName>
        <description>BW 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Requesting Cede</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <description>BW 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <description>BW 2015

ANA Sprint 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subgroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subgroup</label>
        <type>TextArea</type>
    </fields>
    <label>Account Cede Information</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account Change ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Cede Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>